# chat-sql

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  sqlite.py  student.db
