[project]
name = "chat-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.11",
    "arxiv>=2.3.1",
    "bs4>=0.0.2",
    "chromadb>=1.3.4",
    "ddgs>=9.9.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.12.0",
    "faker>=37.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.50.0",
    "groq>=0.22.0",
    "huggingface-hub>=1.1.4",
    "ipykernel>=7.1.0",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.14",
    "langchain-text-splitters>=0.3.8",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.3.0",
    "numexpr>=2.14.1",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
    "python-dotenv>=1.1.0",
    "pytube>=15.0.0",
    "sentence-transformers>=0.2.5.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "unstructured>=0.18.18",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.66",
    "youtube-transcript-api>=1.2.3",
]
