[project]
name = "chat-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.11",
    "ddgs>=9.9.0",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.50.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.0.10",
    "mysql-connector-python>=9.3.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "yfinance>=0.2.66",
]
